--- a/Lab3/Views/Home/CreatePerson.cshtml
+++ b/Lab3/Views/Home/CreatePerson.cshtml
@@ -27,5 +27,5 @@
     <input type="text" name="description" id="description" />
     <br>
     <br>
-    <input type="submit">
+    <input type="submit" name="Create">
 </form>
