--- a/Lab3/Views/Shared/_Layout.cshtml
+++ b/Lab3/Views/Shared/_Layout.cshtml
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        Hello the names Andrew Fang  @ViewBag.title
+        <h1>Hello the names Andrew Fang  @ViewBag.title</h1>
         <br /><br />
-        @Html.ActionLink("Hello World", "Index", "Home") <br />
-        @Html.ActionLink("Razor Example", "Razor", "Home") <br />
-        @Html.ActionLink("Create Person", "CreatePerson", "Home") <br />
+        @Html.ActionLink("Home", "Index", "Home")
+        @Html.ActionLink("Show the song!", "Razor", "Home")
+        @Html.ActionLink("Persons", "CreatePerson", "Home") <br />
 
     </header>
     <div>
