--- a/Lab3/Views/Home/Count.cshtml
+++ b/Lab3/Views/Home/Count.cshtml
@@ -7,10 +7,10 @@
     {
         <p>
             <br />
-            @i green bottles hanging on the wall,
-            @i green bottles hanging on the wall,
-            And if one green bottle should accidentally fall,
-            There'll be @(i-1)  green bottles hanging on the wall.
+            @i green bottles hanging on the wall,<br />
+            @i green bottles hanging on the wall,<br />
+            And if one green bottle should accidentally fall,<br />
+            There'll be @(i-1)  green bottles hanging on the wall.<br />
             <br />
         </p>
     }
